# intone

./: .gitignore  CHANGELOG.md  Cargo.toml  FEASIBILITY.md  LICENSE-MIT  LINUX-FIRST-PLAN.md  README.md  SECURITY.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/intone-cli/: Cargo.toml
crates/intone-cli/src/: lib.rs  main.rs
crates/intone-core/: Cargo.toml
crates/intone-core/src/: announcement.rs  error.rs  lib.rs  navigation.rs  redaction.rs  settings.rs  untrusted.rs
crates/intone-linux/: Cargo.toml
crates/intone-linux/src/: lib.rs  main.rs
crates/intone-macos/: Cargo.toml
crates/intone-macos/src/: ax.rs  lib.rs  main.rs  speech.rs
crates/intone-windows/: Cargo.toml
crates/intone-windows/src/: lib.rs  main.rs  uia.rs
crates/oxeye-cli/: Cargo.toml
crates/oxeye-cli/src/: lib.rs  main.rs
crates/oxeye-core/: Cargo.toml
crates/oxeye-core/src/: announcement.rs  braille.rs  error.rs  exclusions.rs  lib.rs  navigation.rs  settings.rs  untrusted.rs
crates/oxeye-linux/: Cargo.toml
crates/oxeye-linux/src/: lib.rs  main.rs
crates/oxeye-windows/: Cargo.toml
crates/oxeye-windows/src/: lib.rs  main.rs  uia.rs
docs/: braille-transport.md  remote-audio.md  voices.md
docs/investigations/: qt-atspi-caching.md
docs/security/: threat-model.md
scripts/: remote-audio.sh  test-readout.sh
