[package]
name = "oxeye-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Platform-agnostic core for the oxeye screen reader: settings, exclusions, redaction, trust-boundary handling."

[lints]
workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
regex.workspace = true
thiserror.workspace = true
directories.workspace = true
tracing.workspace = true
zeroize.workspace = true
